Bug 420498 - Symbolic icons on buttons do not invert their color when displaying selection color as the button's leading to visibility issues
Summary: Symbolic icons on buttons do not invert their color when displaying selection...
Status: RESOLVED FIXED
Alias: None
Product: Breeze
Classification: Plasma
Component: QStyle (other bugs)
Version First Reported In: 5.18.3
Platform: Other Linux
: NOR normal
Target Milestone: ---
Assignee: Unassigned bugs
URL:
Keywords: usability
Depends on:
Blocks:
 
Reported: 2020-04-24 08:20 UTC by Michael D
Modified: 2021-06-08 16:15 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments
Screenshot showing problem. (5.85 KB, image/png)
2020-04-24 08:23 UTC, Michael D
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Michael D 2020-04-24 08:20:54 UTC
A dark hover color with dark symbolic icons results in poor contrast when hovering over pressed buttons. Over unpressed buttons there's no issue since the hover outlines the button. But when pressed button the hover color fills the button. 

This is not a problem for themes with a suitably light hover color, but I'd prefer if good contrast wasn't hostage to the choice of hover color. Ideally the outlining effect should also be used for pressed buttons.
Comment 1 Michael D 2020-04-24 08:23:30 UTC
Created attachment 127818 [details]
Screenshot showing problem.
Comment 2 Nate Graham 2021-06-08 16:15:51 UTC
Git commit 5f28284a0f0b07df73d3e7e1db18819dd89b19cb by Nate Graham, on behalf of Jan Blackquill.
Committed on 08/06/2021 at 14:09.
Pushed by ngraham into branch 'master'.

Make toolbuttons outlined

M  +4    -7    kstyle/breezehelper.cpp
M  +6    -0    kstyle/breezestyle.cpp

https://invent.kde.org/plasma/breeze/commit/5f28284a0f0b07df73d3e7e1db18819dd89b19cb