Make toolbuttons outlined

BUG: 420498